Bug 324453 - Events with different timezones do not span multiple days visually
Summary: Events with different timezones do not span multiple days visually
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: timezones (other bugs)
Version First Reported In: 4.11
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-03 12:25 UTC by Till Schäfer
Modified: 2013-09-03 16:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.2
Sentry Crash Report:


Attachments
screenshot of the example (in german) (152.17 KB, image/jpeg)
2013-09-03 12:28 UTC, Till Schäfer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Till Schäfer 2013-09-03 12:25:46 UTC
When creating an event in KOrganizer that starts in timezone A and ends in timezone B, the real duration is calculated depending on the timezones and the event is displayed in local time. However if an event is given that have the same day in the timezones A and B, but the start and End Day is different in local time, the event is displayed as the shortest visual possible duration. It does not span multiple days.

Example: 
Lets have a flight from Chicago to Los Angeles and i live in Germany. The flight starts at 14:00 in Chicago (local time) and ends at 16:25 in Los Angeles (local time) at the same day. The real duration is 4:25 hours. In the German time zone this event would be from 21:00 to 01:25. All this Informations are shown correctly in the info of the event. However the visual representation does not match this information (see screenshot)

Reproducible: Always
Comment 1 Till Schäfer 2013-09-03 12:28:23 UTC
Created attachment 82130 [details]
screenshot of the example (in german)
Comment 2 Sergio Martins 2013-09-03 16:07:37 UTC
Git commit 6aabf134f7dd6ce76e4d45d28c14468284644e67 by Sergio Martins.
Committed on 03/09/2013 at 16:03.
Pushed by smartins into branch 'KDE/4.11'.

agendaview: Fix calculation of duration when using other timezones.

M  +3    -2    calendarviews/agenda/agendaview.cpp

http://commits.kde.org/kdepim/6aabf134f7dd6ce76e4d45d28c14468284644e67
Comment 3 Till Schäfer 2013-09-03 16:57:51 UTC
wow, that was fast. thx