agendaview: Fix calculation of duration when using other timezones.

BUG: 324453